arreglo estilos de fomrularios

--- a/formularioLogin.html
+++ b/formularioLogin.html
@@ -10,24 +10,29 @@
     <script src="https://kit.fontawesome.com/ce970c0111.js" crossorigin="anonymous"></script>   
 </head>
 <body class="form-body">
+
     <div class="form-container">
+
         <form class="adoption-form">
+
             <h1 class="adoption-form__title">Inicia Sesión <i class="fa-solid fa-right-to-bracket"></i></h1>
+
             <div class="form-row">
                 <div class="form-group">
                     <label for="nombre">Nombre de usuario</label>
                     <input type="text" id="nombre" name="nombre" required>
                 </div>
                 <div class="form-group">
-                    <label for="apellido">Contraseña</label>
-                    <input type="text" id="apellido" name="apellido" required>
+                    <label for="contraseña">Contraseña</label>
+                    <input type="password" id="contraseña" name="contraseña" required>
                 </div>
             </div>
             
             <div class="form-buttons">               
-                <a href="/formularioRegistro.html"@impo@>¿No tienes cuenta? Registrate</a>              
+                <a id="registrate-link" href="/formularioRegistro.html"@impo@>¿No tienes cuenta? Registrate</a>              
                 <button type="submit" class="submit-button">Ingresar</button>
             </div>
+
         </form>
       
     </div>
