--- a/index.html
+++ b/index.html
@@ -118,8 +118,13 @@
    <footer>
        <div class="footer-links">
            <a href="#">Preguntas frecuentes</a>
-           <a href="#">Ayuda</a>
            <a href="https://api.whatsapp.com/send?phone=5491125203244" target="_blank">Contactate con nosotros</a>
+           <div class="redes-sociales">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>        
+        </div>                     
        </div>        
        <p>comisionWeb 4 - Todos los derechos reservados - 2024</p>
    </footer>
