agrego pagina preguntas frecuentes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/formularioAdopcion.html">Formulario de adopción</a></li>
                 <li><a href="/nosotros.html">Nosotros</a></li>
                 <li><a href="/formularioRegistro.html">Registrarse</a></li>
@@ -117,13 +117,14 @@
 
    <footer>
        <div class="footer-links">
-           <a href="#">Preguntas frecuentes</a>
+           <a href="/preguntasFrecuentes.html">Preguntas frecuentes</a>
            <a href="https://api.whatsapp.com/send?phone=5491125203244" target="_blank">Contactate con nosotros</a>
            <div class="redes-sociales">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>        
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
+            <a href="#"><i class="fa-brands fa-tiktok"></i></a>        
         </div>                     
        </div>        
        <p>comisionWeb 4 - Todos los derechos reservados - 2024</p>
