--- a/nosotros.html
+++ b/nosotros.html
@@ -92,7 +92,7 @@
   
      <footer>
         <div class="footer-links">
-            <a href="#">Preguntas frecuentes</a>
+            <a href="/preguntasFrecuentes.html">Preguntas frecuentes</a>
             <a href="https://api.whatsapp.com/send?phone=5491125203244" target="_blank">Contactate con nosotros</a>
             <div class="redes-sociales">
              <a href="#"><i class="fa-brands fa-instagram"></i></a>
