header, footer, navbar full responsive

--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 </head>
 <body>
 
-     <!-- HEADER NAV-BAR -->
-    <header>       
-        <figure class="logo">
-            <a href="/index.html">
-                <img src="/img/logo-michi.png" alt="">
-            </a>            
-        </figure>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="/formularioAdopcion.html">Formulario de adopción</a></li>
-                <li><a href="/nosotros.html">Nosotros</a></li>
-                <li><a href="/formularioRegistro.html">Registrarse</a></li>
-                <li><a href="/formularioLogin.html">Login</a></li>
-                <li><i id="logout" class="fa-solid fa-power-off"></i></li>
-            </ul>
-        </nav>
-    </header>
+   <!-- HEADER NAV-BAR -->
+<header>       
+    <figure class="logo">
+        <a href="/index.html">
+            <img src="/img/logo-michi.png" alt="">
+        </a>            
+    </figure>
+
+    <!-- AGREGO ELEMENTOS PARA CONTROLAR EL MENU -->
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon"><i class="fa-solid fa-bars"></i></label>
+    
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="/formularioAdopcion.html">Formulario de adopción</a></li>
+            <li><a href="/nosotros.html">Nosotros</a></li>
+            <li><a href="/formularioRegistro.html">Registrarse</a></li>
+            <li><a href="/formularioLogin.html">Login</a></li>
+            <li><i id="logout" class="fa-solid fa-power-off"></i></li>
+        </ul>
+    </nav>
+</header>
 
     <!-- BANNER SEPARADOR -->
     <section class="banner_img"></section>
