--- a/preguntasFrecuentes.html
+++ b/preguntasFrecuentes.html
@@ -17,6 +17,11 @@
                 <img src="/img/logo-michi.png" alt="">
             </a>            
         </figure>
+
+            <!-- AGREGO ELEMENTOS PARA CONTROLAR EL MENU -->
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon"><i class="fa-solid fa-bars"></i></label>
+
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
