--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">    
     <script src="https://kit.fontawesome.com/ce970c0111.js" crossorigin="anonymous"></script>
+
+    <!-- AOS ANIMATE-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -45,7 +48,7 @@
         <section class="cards">
 
 
-            <article class="card">
+            <article class="card" data-aos="zoom-in-right" data-aos-duration="1000" >
                 <figure class="card__image"><img src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=600" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -55,7 +58,7 @@
             </article> 
             
             
-            <article class="card">
+            <article class="card" data-aos="zoom-in-right" data-aos-duration="1500">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/177809/pexels-photo-177809.jpeg?auto=compress&cs=tinysrgb&w=600" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -63,7 +66,7 @@
                     <button class="card__button">Adoptar <i class="fa-solid fa-cat"></i></button>
                 </div>
             </article>   
-            <article class="card">
+            <article class="card" data-aos="zoom-in-right" data-aos-duration="2000">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/1250959/pexels-photo-1250959.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -71,7 +74,7 @@
                     <button class="card__button">Adoptar <i class="fa-solid fa-cat"></i></button>
                 </div>
             </article>   
-            <article class="card">
+            <article class="card" data-aos="zoom-in-right" data-aos-duration="2500">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/1418239/pexels-photo-1418239.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -79,7 +82,7 @@
                     <button class="card__button">Adoptar <i class="fa-solid fa-cat"></i></button>
                 </div>
             </article>   
-            <article class="card">
+            <article class="card" data-aos="zoom-in-left" data-aos-duration="1000">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/978205/pexels-photo-978205.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -87,7 +90,7 @@
                     <button class="card__button">Adoptar <i class="fa-solid fa-cat"></i></button>
                 </div>
             </article>   
-            <article class="card">
+            <article class="card" data-aos="zoom-in-left" data-aos-duration="1500">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/2894203/pexels-photo-2894203.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -95,7 +98,7 @@
                     <button class="card__button">Adoptar <i class="fa-solid fa-cat"></i></button>
                 </div>
             </article>   
-            <article class="card">
+            <article class="card" data-aos="zoom-in-left" data-aos-duration="2000">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/2714398/pexels-photo-2714398.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -103,7 +106,7 @@
                     <button class="card__button">Adoptar <i class="fa-solid fa-cat"></i></button>
                 </div>
             </article>   
-            <article class="card">
+            <article class="card" data-aos="zoom-in-left" data-aos-duration="2500">
                 <figure class="card__image"><img src="https://images.pexels.com/photos/1492219/pexels-photo-1492219.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""></figure>
                 <div class="card__info">
                     <h2 class="card__name">Nombre del michi</h2>
@@ -116,7 +119,7 @@
 
    <!-- CONTACTO WHATSAPP -->
  
-   <a href="https://api.whatsapp.com/send?phone=5491125203244" target="_blank"><img class="icon_contacto" src="/img/icono.wtp2.png" alt=""></a>
+   <a  href="https://api.whatsapp.com/send?phone=5491125203244" target="_blank"><img data-aos="flip-left" class="icon_contacto" src="/img/icono.wtp2.png" alt=""></a>
 
    <!-- FOOTER -->        
 
@@ -134,6 +137,13 @@
        </div>        
        <p>comisionWeb 4 - Todos los derechos reservados - 2024</p>
    </footer>
+
+   <!-- SCRIPTS AOS ANIMATE -->
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+    AOS.init();
+  </script>
+
 </body>
 </html>
 
